# subwiz

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  example_input.txt  example_languages.txt  example_numbers.txt  multi-apex.txt  pbcopy  pyproject-cpu.toml  pyproject.toml  requirements-cpu.txt  requirements.txt  setup.py  subwiz.py
.github/workflows/: lint.yaml  publish-cpu.yml  publish.yml  test-python-versions.yaml  test-python39.yaml  tests.yaml
benchmark/: benchmark.ipynb  benchmark_dataset.json
subwiz/: __init__.py  cli.py  cli_printer.py  main.py  model.py  resolve.py  type.py  types.py
tests/: test_cli_output.py  test_device.py  test_domain_inputs.py  test_readme_switches.py  test_resolve.py  test_results.py  test_temperature.py  test_types.py
